*going on with setup assistant